fixed nav menu on mobile

--- a/scss/theme/_menu.scss
+++ b/scss/theme/_menu.scss
@@ -83,6 +83,7 @@ $navbar-hover-bg: $gray-color-dark;
         position: absolute;
         left: 100%;
         top: 0;
+        border-radius: $default-radius;
       }
     }
 
